fix bug in slideover so container is properyly placed within parent container. HOWEVER container is not responsive

--- a/frontend/src/style/DetailSlideOver.css
+++ b/frontend/src/style/DetailSlideOver.css
@@ -1,4 +1,4 @@
 .DetailSlideOver-content {
   border: 1px solid #545454;
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
 }
