--- a/frontend/src/style/RenderInfo.css
+++ b/frontend/src/style/RenderInfo.css
@@ -1,4 +1,4 @@
 #RenderInfo-add {
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
 }
